config-k8s/defTelemetry/grafana/virtualService-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - grafana.usvc.algo.fit
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 3000
